--- a/development.mdx
+++ b/development.mdx
@@ -4,7 +4,7 @@ description: 'Preview changes locally to update your docs'
 ---
 
 <Info>
-  **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding.
+  **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding. Yes, you can use npm or yarn to install Mintlify.
 </Info>
 
 Follow these steps to install and run Mintlify on your operating system:
